<resources>
    <string name="country_code">BR</string>
    <string name="language_code">pt</string>
    <string name="full_date_format">dd/MM/yyyy HH:mm</string>
    <string name="db_date_format">yyyy-MM-dd HH:mm</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="app_name">Sacarolha</string>
    <string name="entrar">Entrar</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_usuario_ou_email">Digite seu usuário ou email</string>
    <string name="digite_seu_usuario">Digite seu usuário</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="saca_rolha">Saca Rolha</string>
    <string name="rolha">rolha</string>
    <string name="saca">saca </string>
    <string name="onde_cada_venda_uma_rolha_a_menos">Onde cada venda é uma rolha a menos!</string>
    <string name="registrar">Registrar</string>
    <string name="cadastrar_cliente">Cadastrar cliente</string>
    <string name="dados_basicos">Dados básicos</string>
    <string name="endereco">Endereço</string>
    <string name="underline_registrar_usuario"><u>Registrar usuário</u></string>
    <string name="underline_ja_possui_conta"><u>Já possui conta?</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="estado_cidade">%1$s - %2$s</string>
    <string name="documento_dois_pontos">Documento: %1$s</string>
    <string name="telefone_dois_pontos">Telefone: %1$s</string>
    <string name="email_dois_pontos">Email: %1$s</string>
    <string name="endereco_dois_pontos">Endereço: %1$s</string>
    <string name="logo_do_aplicativo">Logo do aplicativo</string>
    <string name="lembrar_usu_rio">Lembrar usuário</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="relat_rios">Relatórios</string>
    <string name="home">Home</string>
    <string name="clientes">Clientes</string>
    <string name="vender">Vender</string>
    <string name="vinhos">Vinhos</string>
    <string name="produto_nao_encontrado">Produto não encontrado!</string>
    <string name="venda_realizada_com_sucesso">Venda realizada com sucesso!</string>
    <string name="cliente_nao_encontrado">Cliente não encontrado!</string>
    <string name="ola">Olá &lt;b>%1$s&lt;/b></string>
    <string name="revise_o_pedido">Revise o pedido</string>
    <string name="total">Total:</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="filtrar_clientes">Filtrar Clientes</string>
    <string name="nome">Nome</string>
    <string name="documento">Documento</string>
    <string name="filtrar">Filtrar</string>
    <string name="filtrar_vendas">Filtrar Vendas</string>
    <string name="data">Data</string>
    <string name="filtrar_vinhos">Filtrar Vinhos</string>
    <string name="tipo">Tipo</string>
    <string name="safra">Safra</string>
    <string name="safra_data">Safra %1$d</string>
    <string name="nao_safrado">Não-safrado</string>
    <string name="price">Price</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="escolha_o_mes_e_o_ano">Escolha o Mês e o Ano</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="ok">OK</string>
    <string name="quantidade_disponivel">Quantidade disponível</string>
    <string name="adicionar">Adicionar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="fechar">Fechar</string>
    <string name="adicionar_item">Adicionar item</string>
    <string name="filtros">Filtros</string>
    <string name="filtros_value">Filtros (%1$d)</string>
    <string name="zero">0</string>
    <string name="nome_completo">Nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="cliente_cadastrado_com_sucesso">Cliente cadastrado com sucesso!</string>
    <string name="vinho_cadastrado_com_sucesso">Vinho cadastrado com sucesso!</string>
    <string name="vinho_salvo_com_sucesso">Vinho salvo com sucesso!</string>
    <string name="ja_existe_vinho_com_este_codigo">Já existe vinho com este código!</string>
    <string name="total_vendido">Total Vendido: %1$d Vinhos este Mês</string>
    <string name="receita_total">Receita Total: R$ %1$.2f</string>
    <string name="share_image_failed">Não foi possível compartilhar a imagem.</string>
    <string name="quantidade_obtida">Quantidade Obtida: %1$d</string>
    <string name="valor_total_gasto">Valor Total: R$ %1$s</string>
    <string name="valor_total_gasto_masked">Valor total gasto: %1$s</string>
    <string name="total_adquirido">Total adquirido: %1$d</string>
    <string name="na">N/A</string>
    <string name="quantidade_vendida">Quantidade Vendida: %1$d</string>
    <string name="valor_total_venda">Valor Total: R$ %1$.2f</string>
    <string name="report_month_year">%1$s de %2$d</string>
    <string name="error_documento_vazio">Documento não pode estar vazio!</string>
    <string name="error_documento_invalido">Documento inválido</string>
    <string name="error_telefone_vazio">Telefone não pode estar vazio!</string>
    <string name="error_email_vazio">Email não pode estar vazio!</string>
    <string name="error_estado_vazio">Selecione um estado!</string>
    <string name="cliente_salvo_sucesso">Cliente salvo com sucesso!</string>
    <string name="error_nome_vazio">Nome não pode estar vazio!</string>
    <string name="error_preco_vazio">Preço não pode estar vazio!</string>
    <string name="error_estoque_vazio">Estoque não pode estar vazio!</string>
    <string name="error_selecionar_tipo">Selecione um tipo!</string>
    <string name="error_selecionar_estado">Selecione um estado!</string>
    <string name="vinho_nao_encontrado">Vinho não encontrado!</string>
    <string name="error_codigo_existente">Já existe vinho com este código!</string>
    <string name="scan_code_prompt">Aumentar/Diminuir o volume para Ligar/Desligar o flash</string>
    <string name="produto_ja_adicionado_ao_carrinho">Produto já adicionado ao carrinho!</string>
    <string name="alert_excluir_carrinho">Deseja excluir o carrinho?</string>
    <string name="alert_acao_nao_pode_ser_desfeita">A ação não pode ser desfeita</string>
    <string name="alert_sim">Sim</string>
    <string name="alert_carrinho_vazio_adicionar_itens">Carrinho vazio! Adicione itens para prosseguir!</string>
    <string name="cidade">Cidade</string>
    <string name="rua">Rua</string>
    <string name="error">Error</string>
    <string name="bairro">Bairro</string>
    <string name="num_ponto">Num.</string>
    <string name="complemento">Complemento</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastrar_vinho">Cadastrar Vinho</string>
    <string name="descri_o">Descrição</string>
    <string name="ano_da_safra">Ano da safra</string>
    <string name="dados_de_controle">Dados de controle</string>
    <string name="pre_o">Preço</string>
    <string name="estoque">Estoque</string>
    <string name="estoque_value">Estoque: %1$d</string>
    <string name="c_digo_do_produto">Código do produto</string>
    <string name="carrinho">Carrinho</string>
    <string name="pesquisar_vinho">Pesquisar vinho</string>
    <string name="escolher_cliente">Escolher Cliente</string>
    <string name="escolha_o_cliente">Escolha o cliente</string>
    <string name="salvar">Salvar</string>
    <string name="salvar_alteracoes">Salvar alterações?</string>
    <string name="sim">Sim</string>
    <string name="codigo_do_produto">Código do produto</string>
    <string name="relat_rio_mensal">Relatório mensal</string>
    <string name="total_vendido_0_vinhos_este_mes">Total Vendido: 0 Vinhos este Mês</string>
    <string name="receita_total_rs_0_00_em_vendas">Receita Total: R$ 0,00 em Vendas!</string>
    <string name="ranking">Ranking</string>
    <string name="relat_rio_por_cliente">Relatório por cliente</string>
    <string name="relat_rio">Relatório</string>
    <string name="vinhos_adquiridos">Vinhos adquiridos</string>
    <string name="vendas">Vendas</string>
    <string name="nova_venda">Nova venda</string>
    <string name="name">Name</string>
    <string name="quantidade">Quantidade</string>
    <string name="pre_o_total">Preço total</string>
    <string name="pre_o_unit_rio">Preço unitário</string>
    <string name="x_divider">x</string>
    <string name="logout">Logout</string>
    <string name="state_none">Selecione o estado</string>
    <string name="state_ac">Acre</string>
    <string name="state_al">Alagoas</string>
    <string name="state_ap">Amapá</string>
    <string name="state_am">Amazonas</string>
    <string name="state_ba">Bahia</string>
    <string name="state_ce">Ceará</string>
    <string name="state_df">Distrito Federal</string>
    <string name="state_es">Espírito Santo</string>
    <string name="state_go">Goiás</string>
    <string name="state_ma">Maranhão</string>
    <string name="state_mt">Mato Grosso</string>
    <string name="state_ms">Mato Grosso do Sul</string>
    <string name="state_mg">Minas Gerais</string>
    <string name="state_pa">Pará</string>
    <string name="state_pb">Paraíba</string>
    <string name="state_pr">Paraná</string>
    <string name="state_pe">Pernambuco</string>
    <string name="state_pi">Piauí</string>
    <string name="state_rj">Rio de Janeiro</string>
    <string name="state_rn">Rio Grande do Norte</string>
    <string name="state_rs">Rio Grande do Sul</string>
    <string name="state_ro">Rondônia</string>
    <string name="state_rr">Roraima</string>
    <string name="state_sc">Santa Catarina</string>
    <string name="state_sp">São Paulo</string>
    <string name="state_se">Sergipe</string>
    <string name="state_to">Tocantins</string>
    <string name="sort_mais_vendidos">Mais Vendidos</string>
    <string name="sort_menos_vendidos">Menos Vendidos</string>
    <string name="sort_maior_receita">Maior Receita</string>
    <string name="sort_menor_receita">Menos Receita</string>
    <string name="wine_type_none">Selecione o tipo</string>
    <string name="wine_type_tinto">Vinho Tinto</string>
    <string name="wine_type_branco">Vinho Branco</string>
    <string name="wine_type_rose">Vinho Rosé</string>
    <string name="wine_type_organico">Vinho Orgânico</string>
    <string name="c_digo_de_barras_tipo_code_39">Código de barras tipo CODE-39:</string>
    <string name="obs_c_digo_destinado_apenas_para_uso_pr_prio_e_n_o_deve_ser_utilizado_para_comercializa_o_a_terceiros">*Obs: Código destinado apenas para uso no aplicativo e não deve ser utilizado para controle de terceiros</string>
    <string name="nao_ha_codigo_de_barras_para_compartilhar">Não há código de barras para compartilhar!</string>
    <string name="gerar_c_digo_de_barras_nico">Gerar Código de Barras único</string>
    <string name="compartilhar_c_digo_de_barras">Compartilhar Código de Barras</string>
</resources>