<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ClientesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relat_rio"
                android:fontFamily="@font/zain_bold"
                android:textSize="30sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|end">

                <ImageView
                    android:id="@+id/btnVoltar"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:paddingHorizontal="15sp"
                    android:src="@drawable/ic_arrow_back"
                    />


            </LinearLayout>



        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:id="@+id/clientReportContent"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10sp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20sp"
                        android:layout_marginVertical="10sp"
                        android:src="@drawable/title"
                        />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5sp">

                        <TextView
                            android:id="@+id/textNome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nome"
                            android:textAlignment="center"
                            android:fontFamily="@font/zain_bold"
                            android:textSize="30sp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10sp"
                            android:background="@color/light_gray"/>

                        <TextView
                            android:id="@+id/textDocumento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/documento"
                            android:fontFamily="@font/zain_regular"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/textNumero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telefone"
                            android:fontFamily="@font/zain_regular"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/textEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:fontFamily="@font/zain_regular"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/textEndereco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/estado_cidade"
                            android:fontFamily="@font/zain_regular"
                            android:textSize="20sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bkg_light_purple_rounded"
                        android:padding="10sp">

                        <TextView
                            android:id="@+id/textTotalAdquirido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/zain_bold"
                            android:textSize="20sp"
                            android:text="@string/total_vendido_0_vinhos_este_mes"
                            />

                        <TextView
                            android:id="@+id/textTotalGasto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/receita_total_rs_0_00_em_vendas"
                            android:fontFamily="@font/zain_bold"
                            android:textSize="20sp"
                            />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/vinhos_adquiridos"
                        android:layout_marginVertical="5sp"
                        android:fontFamily="@font/zain_bold"
                        android:textSize="30sp"/>

                    <LinearLayout
                        android:id="@+id/produtoTotalContent"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnCompartilhar"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compartilhar"
            android:fontFamily="@font/zain_regular"
            android:textSize="20sp"
            android:background="@drawable/bkg_dark_purple"
            app:backgroundTint="@null"
            />

    </LinearLayout>

</FrameLayout>