<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="5sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:fontFamily="@font/zain_bold"
                android:text="@string/filtrar_vendas"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                />

            <ImageView
                android:id="@+id/limparFiltros"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="16sp"
                android:src="@drawable/ic_clear_filter"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:layout_marginVertical="10sp"
            android:padding="8sp"
            android:singleLine="true"

            android:hint="@string/nome"

            android:fontFamily="@font/zain_regular"
            android:background="@drawable/bkg_light_purple_rounded"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_purple"
            />

        <EditText
            android:id="@+id/editData"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginVertical="10sp"
            android:padding="8sp"
            android:hint="@string/data"
            android:fontFamily="@font/zain_regular"
            android:background="@drawable/bkg_light_purple_rounded"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/dark_purple"
            android:focusable="false"
            android:clickable="true"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:minWidth="125sp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:backgroundTint="@color/dark_deep_red"
                android:text="@string/cancelar"/>

            <Button
                android:id="@+id/btnFiltrar"
                android:layout_width="0dp"
                android:minWidth="125sp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:backgroundTint="@color/dark_purple"
                android:text="@string/filtrar"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
