<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/saleReview"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_marginVertical="10sp"
            android:src="@drawable/title"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="5sp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_cliente_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="22sp"
                android:fontFamily="@font/zain_regular"
                android:text="@string/nome"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/text_cliente_documento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:fontFamily="@font/zain_regular"
                android:text="@string/documento"
                android:singleLine="true"
                android:ellipsize="end"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_weight="0.95"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_weight="0.95"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            >

            <TextView
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.65"
                android:layout_height="wrap_content"
                android:paddingVertical="10sp"
                android:fontFamily="@font/zain_regular"
                android:singleLine="true"
                android:textSize="20sp"
                android:text="@string/total"
                android:textAlignment="textEnd"

                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_preco_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="@font/zain_bold"
                    android:text="@string/price"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="20sp"
                    />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnCompartilhar"
            android:layout_width="match_parent"
            android:minWidth="130sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:backgroundTint="@color/dark_purple"
            android:text="@string/compartilhar"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:minWidth="130sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:backgroundTint="@color/medium_purple"
            android:text="@string/fechar"/>

    </LinearLayout>

</LinearLayout>
